// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge Component should allow adding custom element 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
>
  Hello
</Text>
`;

exports[`Badge Component should allow wrapper style 1`] = `
<Component
  style={
    Array [
      Object {},
    ]
  }
>
  <Component
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#2089dc",
          "borderRadius": 20,
          "justifyContent": "center",
          "padding": 12,
          "paddingBottom": 3,
          "paddingTop": 3,
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "white",
            "fontSize": 14,
          },
          undefined,
        ]
      }
    />
  </Component>
</Component>
`;

exports[`Badge Component should apply container style in the badge 1`] = `
<Component
  style={
    Array [
      undefined,
    ]
  }
>
  <Component
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#2089dc",
          "borderRadius": 20,
          "justifyContent": "center",
          "padding": 12,
          "paddingBottom": 3,
          "paddingTop": 3,
        },
        Object {
          "backgroundColor": "orange",
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "white",
            "fontSize": 14,
          },
          undefined,
        ]
      }
    />
  </Component>
</Component>
`;

exports[`Badge Component should apply text style in the badge 1`] = `
<Component
  style={
    Array [
      undefined,
    ]
  }
>
  <Component
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#2089dc",
          "borderRadius": 20,
          "justifyContent": "center",
          "padding": 12,
          "paddingBottom": 3,
          "paddingTop": 3,
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "white",
            "fontSize": 14,
          },
          Object {
            "color": "orange",
          },
        ]
      }
    />
  </Component>
</Component>
`;

exports[`Badge Component should pass value props should still work 1`] = `
<Component
  style={
    Array [
      undefined,
    ]
  }
>
  <Component
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#2089dc",
          "borderRadius": 20,
          "justifyContent": "center",
          "padding": 12,
          "paddingBottom": 3,
          "paddingTop": 3,
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "white",
            "fontSize": 14,
          },
          undefined,
        ]
      }
    >
      foo
    </Text>
  </Component>
</Component>
`;

exports[`Badge Component should render if element included 1`] = `
<Component
  style={
    Array [
      undefined,
    ]
  }
>
  <Component
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#2089dc",
          "borderRadius": 20,
          "justifyContent": "center",
          "padding": 12,
          "paddingBottom": 3,
          "paddingTop": 3,
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      title="foo"
    />
  </Component>
</Component>
`;

exports[`Badge Component should render without issue 1`] = `
<Component
  style={
    Array [
      undefined,
    ]
  }
>
  <Component
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#2089dc",
          "borderRadius": 20,
          "justifyContent": "center",
          "padding": 12,
          "paddingBottom": 3,
          "paddingTop": 3,
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "white",
            "fontSize": 14,
          },
          undefined,
        ]
      }
    />
  </Component>
</Component>
`;

exports[`Badge Component should show error if value and child are included 1`] = `
<Component
  style={
    Array [
      undefined,
    ]
  }
>
  <Component
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#2089dc",
          "borderRadius": 20,
          "justifyContent": "center",
          "padding": 12,
          "paddingBottom": 3,
          "paddingTop": 3,
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    />
  </Component>
</Component>
`;
